renamed options <ServerIP>, <ServerPort> and <ServerPassword> to <ControlIP>, <ControlPort> and <ControlPassword> to avoid confusion with news-server options <ServerX.Host>, <ServerX.Port> and <ServerX.Password>; the old option names are still recognized and are automatically renamed when the configuration is saved from web-interface; also renamed option <> to <MainDir>
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@477 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/README
+++ b/README
@@ -419,7 +419,7 @@ Running client & server on seperate machines:
 Since nzbget communicates via TCP/IP it's possible to have a server running on
 one computer and adding downloads via a client on another computer.
 
-Do this by setting the "serverip" option in the nzbget.conf file to point to the
+Do this by setting the "ControlIP" option in the nzbget.conf file to point to the
 IP of the server (default is localhost which means client and server runs on 
 same computer)
 
