--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-10.0-testing:
+  - please see subversion log at
+    http://nzbget.svn.sourceforge.net/viewvc/nzbget/?view=log
+
 nzbget-9.0:
   - changed version naming scheme by removing the leading zero: current
     version is now called 9.0 instead of 0.9.0 (it's really the 9th major
