updated version string to 10.1
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@611 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-10.1:
+  - please see subversion log at
+    http://nzbget.svn.sourceforge.net/viewvc/nzbget/?view=log
+
 nzbget-10.0:
   - added built-in unpack:
         - rar and 7-zip formats are supported (via external Unrar and
