updated version string to 11.0-testing
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@615 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+nzbget-11.0:
+  - please see subversion log at
+    http://nzbget.svn.sourceforge.net/viewvc/nzbget/?view=log
+
 nzbget-10.1:
   - fixed: articles with decoding errors (incomplete or damaged posts)
     caused infinite retry-loop in downloader.
